  - Markdown relative links in the wiki link to wiki pages, markdown relative links in repositories link to files in the repository
  - Added Slack service integration (Federico Ravasio)
  - Better API responses for access_levels (sponsored by O'Reilly Media)
  - Requires at least 2 unicorn workers
  - Requires gitlab-shell v1.9+

v 6.6.5
  - Added option to remove issue assignee on project issue page and issue edit page (Jason Blanchard)
  - Hide mr close button for comment form if merge request was closed or inline comment
  - Adds ability to reopen closed merge request

v 6.6.4
  - Add missing html escape for highlighted code blocks in comments, issues

v 6.6.3
  - Fix 500 error when edit yourself from admin area
  - Hide private groups for public profiles

v 6.6.2
  - Fix 500 error on branch/tag create or remove via UI

v 6.6.1
  - Fix 500 error on files tab if submodules presents

v 6.6.0
  - Retrieving user ssh keys publically(github style): http://__HOST__/__USERNAME__.keys
  - Permissions: Developer now can manage issue tracker (modify any issue)
  - Improve Code Compare page performance
  - Group avatar
  - Pygments.rb replaced with highlight.js
  - Improve Merge request diff store logic
  - Improve render performnace for MR show page
  - Fixed Assembla hardcoded project name
  - Jira integration documentation
  - Refactored app/services
  - Remove snippet expiration
  - Mobile UI improvements (Drew Blessing)
  - Fix block/remove UI for admin::users#show page
  - Show users' group membership on users' activity page (Robert Djurasaj)
  - User pages are visible without login if user is authorized to a public project
  - Markdown rendered headers have id derived from their name and link to their id
  - Improve application to work faster with large groups (100+ members)
  - Multiple emails per user
  - Show last commit for file when view file source
  - Restyle Issue#show page and MR#show page
  - Ability to filter by multiple labels for Issues page